# nix-workshop

./: .gitignore  404.html  Dockerfile  LICENSE.md  Makefile  README.md  book.toml  highlight.css  index.html  nix.conf  print.html  searchindex.js  searchindex.json  shell.nix
.github/workflows/: gh-pages.yaml
01-getting-started/: 01-introduction.html  01-introduction.md  02-installation.html  02-installation.md  03-resources.html
02-nix-commands/: 01-install-global-packages.html  01-install-global-packages.md  02-use-packages-in-nix-shell.html  02-use-packages-in-nix-shell.md  03-nix-repl.html  03-nix-repl.md
03-nix-basics/: 01-primitives.html  01-primitives.md  02-expressions.html  02-expressions.md  03-files.html  03-files.md  03-import.md  04-files.md  04-import.html  04-import.md  05-derivation.md
03-nix-basics/03-files/: hello.nix
03-nix-basics/04-import/: bar.nix  default.nix  foo.nix
03-nix-basics/05-derivation/: hello-sleep.nix  hello.nix
04-derivations/: 01-derivation-basics.html  02-dependencies.html  03-fibonacci.html  04-raw-derivation.html  05-standard-derivation.html  06-build-phases.html
05-package-management/: 01-dependency-management.html  02-basic-haskell.html  03-version-conflicts.html  04-transitive-version-conflicts.html  05-multi-versioned-haskell-packages.html  06-other-strategies.html
06-infrastructure/: 01-caching-nix.html  02-caching-haskell.html
code/: SUMMARY.md  nixpkgs.nix  workshop.md
code/05-package-management/haskell-project-v1/src/: haskell-project-v1.cabal  project.nix
code/05-package-management/haskell-project-v2/src/: haskell-project.cabal
code/05-package-management/haskell-project-v3/haskell/: haskell-project.cabal
code/05-package-management/haskell-project-v3/src/: haskell-project.cabal
scripts/: docker.sh  setup.sh
theme/: highlight.js
(+68 files in other folders)
